# flooid

./: README.md  flooid.cabal  stack.yaml
app/: Main.hs  Quad.hs
resources/: advect.frag  buoyancy.frag  compute-divergence.frag  jacobi.frag  obstacles.frag  quad.vert  splat.frag  subtract-gradient.frag  visualize.frag
